<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".CreateAmericanQuestionActivity">

    <RelativeLayout
        android:id="@+id/question_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/edt_num_of_question_qua"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/how_much_question_you_want_to_add"
            android:textColorHint="@color/white"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            android:textColor="@color/black">
        </EditText>

        <TextView
            android:id="@+id/tv_num_of_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_marginTop="35dp"
            android:textSize="20sp"
            android:textColor="@color/black">

        </TextView>


    </RelativeLayout>


    <EditText
        android:id="@+id/edt_question_qua"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:textColor="@color/black"
       android:hint="@string/write_the_question"
        android:textColorHint="@color/white"
       android:layout_marginTop="20sp"
       android:textAlignment="center"
       android:gravity="center"
       android:layout_below="@id/question_container"
        android:textSize="25sp"
       >
   </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@id/edt_question_qua"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edt_option_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textAllCaps="false"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:minHeight="48dp"
            android:hint="@string/option_1">
        </EditText>

        <EditText
            android:id="@+id/edt_option_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:textAllCaps="false"
            android:padding="4dp"
            android:textColorHint="@color/white"
            android:minHeight="48dp"
            android:hint="@string/option_2">
        </EditText>

        <EditText
            android:id="@+id/edt_option_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="6dp"
            android:textAllCaps="false"
            android:padding="4dp"
            android:minHeight="48dp"
            android:hint="@string/option_3">
        </EditText>

        <EditText
            android:id="@+id/edt_option_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:textColorHint="@color/white"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:minHeight="48dp"
            android:hint="@string/option_4">
        </EditText>

        <EditText
            android:id="@+id/edt_option_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:layout_margin="6dp"
            android:textAllCaps="false"
            android:padding="4dp"
            android:minHeight="48dp"
            android:hint="@string/option_5">
        </EditText>

        <EditText
            android:id="@+id/edt_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/white"
            android:textAllCaps="false"
            android:layout_margin="6dp"
            android:padding="4dp"
            android:minHeight="48dp"
            android:hint="@string/answer">
        </EditText>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_prev_american"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginStart="80dp"
                android:minHeight="48dp"
               android:text="@string/previous_question"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white">

            </Button>


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:gravity="center"
                android:minHeight="48dp"
               android:text="@string/submit"
                android:layout_marginStart="80dp"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/white">

            </Button>


        </LinearLayout>


    </LinearLayout>



</RelativeLayout>
