<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".IsStudentOrTeacherActivity">


    <TextView
        android:id="@+id/textSelectRole"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="139dp"
        android:text="@string/please_choose_your_role"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnTeacher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnTeacher"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="73dp"
        android:background="@drawable/round_blue_shape"
        android:text="@string/teacher"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnStudent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSelectRole" />

    <Button
        android:id="@+id/btnStudent"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginBottom="233dp"
        android:background="@drawable/round_blue_shape"
        android:text="@string/student"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnTeacher" />

</androidx.constraintlayout.widget.ConstraintLayout>
